--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,16 +7,17 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
+        android:name=".TickTackToeApp"
         android:theme="@style/MyTheme">
-        <activity android:name=".StartPage">
+        <activity android:name=".view.StartPageActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".TickTackToes"></activity>
-        <activity android:name=".Themes"></activity>
+        <activity android:name=".view.TickTackToeFragment"></activity>
+        <activity android:name=".view.ThemesActivity"></activity>
     </application>
 
 </manifest>
